--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-        <div class="js-clock">
-            <h1>00:00</h1>
-        </div>
-        <form class="js-form form ">
-            <input type="text" placeholder="What is your name?" />
-        </form>
-        <h4 class="js-greeting greetings"></h4>
-        <form class="js-toDoForm">
-            <input type="text" placeholder="Write a to do " />
-        </form>
-        <ul class="js-toDoList"></ul>
-        <span class="js-weather"></span>
+        <header>
+            <span class="js-weather weather"></span>
+        </header>
+        <main class="main">
+            <div class="js-clock clock">
+                <h1>00:00</h1>
+            </div>
+            <form class="js-form form ">
+                <input type="text" placeholder="😄What is your name?" />
+            </form>
+            <h4 class="js-greeting greetings"></h4>
+            <form class="js-toDoForm">
+                <input type="text" placeholder="👍Write Your Goals!🔥" />
+            </form>
+            <ul class="js-toDoList"></ul>
+        </main>
         <script src="clock.js"></script>
         <script src="greeting.js"></script>
         <script src="todo.js"></script>
